--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -1,12 +1,12 @@
-extends ../layout
+extends ../layouts/layout
 
 block content
   form(action='/login', method='POST', role='form')
     legend Login
     .form-group
       label(for='username') Username
-      input.form-control(type='text', placeholder='Enter Username')
+      input.form-control(type='text', name='username', placeholder='Enter Username')
       br
       label(for='password') Password
-      input.form-control(type='password', placeholder='Enter Password')
+      input.form-control(type='password', name='password', placeholder='Enter Password')
     button.btn.btn-primary(type='submit') Submit 
