--- a/app/views/layouts/navigation.jade
+++ b/app/views/layouts/navigation.jade
@@ -1,5 +1,5 @@
 nav.navbar.navbar-inverse
-  a(href="/").navbar-brand Title
+  a(href="/").navbar-brand= title
   ul.nav.navbar-nav.pull-right
     li.active
       a(href="/") Home
