--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -1,5 +1,13 @@
 extends ./layouts/layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  p 
+  .jumbotron.text-center
+    h2 Welcome to Node.js + Express.js + MongoDB Starter Kit
+    ul.list-group
+      li.list-group-item Node.js - Server
+      li.list-group-item Express.js - Application Framework
+      li.list-group-item MongoDB(Mongoose) - Document Store
+      li.list-group-item Passport.js - Authentication 
+    p
+      a(href="https://github.com/vageeshb/Node-Express-Starter-Kit").btn.btn-primary.btn-large Know More
