--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -3,11 +3,4 @@ extends ./layouts/layout
 block content
   p 
   .jumbotron.text-center
-    h2 Welcome to Node.js + Express.js + MongoDB Starter Kit
-    ul.list-group
-      li.list-group-item Node.js - Server
-      li.list-group-item Express.js - Application Framework
-      li.list-group-item MongoDB(Mongoose) - Document Store
-      li.list-group-item Passport.js - Authentication 
-    p
-      a(href="https://github.com/vageeshb/Node-Express-Starter-Kit").btn.btn-primary.btn-large Know More
+    h2 Leo8
