--- a/app/views/layouts/navigation.jade
+++ b/app/views/layouts/navigation.jade
@@ -1,13 +1,13 @@
 nav.navbar.navbar-inverse
   a(href="/").navbar-brand= (title == null) ? "Leo 8" : "Leo 8 | " + title
   ul.nav.navbar-nav.pull-right
-    li.active
-      a(href="/") Home
     if (user)
+      li.active
+        a(href='/profile', title='Click here to go to your profile') Logged in as #{user.username}
       li
         a(href="/logout") Logout
     else 
-      li
+      li.active
         a(href='/login') Login
       li
         a(href='/signup') Signup
