--- a/app/views/layouts/flash.jade
+++ b/app/views/layouts/flash.jade
@@ -1,5 +1,5 @@
 if (message && message.length > 0)
-  .alert.alert-danger
+  .alert.alert-info
     button.close(type='button', data-dismiss='alert', aria-hidden='true') &times;
     h4= message
 
