--- a/app/views/users/admin.jade
+++ b/app/views/users/admin.jade
@@ -5,10 +5,10 @@ block content
   table.table.table-bordered.table-hover
     thead
       tr.info
-        th Name
-        th Email
-        th Role
-        th(colspan=2) Options
+        th.text-center Name
+        th.text-center Email
+        th.text-center Role
+        th(colspan=2).text-center Options
     tbody
       each thisUser in users
         tr
@@ -22,12 +22,17 @@ block content
             td(title='Basic Privileges')
               a.btn.btn-xs.btn-primary.btn-circle.disabled: span.glyphicon.glyphicon-user
               |  Basic User 
-          td Edit
-          - if(thisUser.role == 1)
+          - if(thisUser.id != user.id && thisUser.role == 1)
+            td.text-center(title='Cannot edit another Admin User!')
+              a(href='#delete', disabled='disabled').btn.btn-xs.btn-danger
+                span.glyphicon.glyphicon-pencil
             td.text-center(title='Cannot delete another Admin User!')
-              a(href='#delete', rel=thisUser._id, disabled='disabled').btn.btn-xs.btn-danger.deleteuser
+              a(href='#delete', disabled='disabled').btn.btn-xs.btn-danger.deleteuser
                 span.glyphicon.glyphicon-trash
           - else
+            td.text-center
+              a(href='/users/' + thisUser._id + '/edit').btn.btn-xs.btn-danger
+                span.glyphicon.glyphicon-pencil
             td.text-center
               a(href='#delete', rel=thisUser._id).btn.btn-xs.btn-danger.deleteuser
                 span.glyphicon.glyphicon-trash
